[package]
name = "spmc"
version = "0.2.2"
description = "Simple SPMC channel"
keywords = ["spmc", "channel", "queue"]
authors = ["Sean McArthur <sean.monstar@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/seanmonstar/spmc"
documentation = "https://docs.rs/spmc"

[dependencies]
futures = { optional = true, version = "0.1" }
void = { optional = true, version = "1" }

[features]
default = ["futures_impls"]
futures_impls = ["futures", "void"]
